Mon Jan 15 12:55:37 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c: Revert change to run getopt_long twice.  This can go in
	after 1.7.

Mon Jan 15 13:03:28 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* filesubr.c (deep_remove_dir): added test of EEXIST for nonempty
	  directory (Posix states that both ENOTEMPTY (BSD) and EEXIST
	  (SYSV) are valid)

	* main.c (main): run getopt_long twice to allow command-line
	  suppression of reading the cvsrc file

Fri Jan 12 10:02:43 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Version 1.6.86.

Thu Jan 11 23:28:05 1996  J.T. Conklin  <jtc@rtl.cygnus.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* fileattr.h (fileattr_startdir): Add comment about REPOS == NULL.
	* fileattr.c (fileattr_read, fileattr_write): Assert that
	fileattr_stored_repos != NULL.
	(fileattr_free): If fileattr_stored_repos is NULL, don't free it.

Thu Jan 11 18:03:21 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * scramble.c (descramble): deal with DIAGNOSTIC better.

Thu Jan 11 12:04:42 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* main.c: remove CVS_NOADMIN.

	* options.h.in: remove CVS_NOADMIN

Thu Jan 11 10:28:44 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * scramble.c (descramble): make sure the string returned is safe
        to free().

Wed Jan 10 01:11:23 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_notify): Cast return value from malloc.

	* edit.c (notify_do): Use struct assignment, not struct
	initialization (which SunOS4 /bin/cc doesn't have).

Tue Jan  9 09:41:29 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Version 1.6.85.

	We use version numbers instead of patchlevels.  But there was some
	confusing patchlevel stuff lying around.  Nuke it:
	* Makefile.in (HEADERS): Remove patchlevel.h
	* patchlevel.h: Removed.
	* main.c: Don't include patchlevel.h.
	(main): Don't print patch level.

	* server.c (check_repository_password): Check for errors from